# rad-tools

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: rust.yml
bio_dose/: Cargo.toml  README.md
bio_dose/src/: bed.rs  eqd2.rs  lib.rs
catalyst/: Cargo.toml  README.md
catalyst/src/: algo.rs  couch_profile_log.rs  lib.rs
common/: Cargo.toml  README.md
common/src/: dicom.rs  fs.rs  lib.rs  macros.rs  system.rs
core/: Cargo.toml  README.md
core/src/: cli.rs
dcm_cp/: README.md
dcm_cp/src/: lib.rs
dcm_data/: Cargo.toml
dcm_data/src/: common.rs  ct.rs  lib.rs  rtdose.rs  rtplan.rs  rtstruct.rs
dcm_data/src/io/: common.rs  ct.rs  mod.rs  rtdose.rs  rtplan.rs  rtstruct.rs  utils.rs
dcm_data/src/value/: macros.rs  mod.rs  value_ae.rs  value_as.rs  value_at.rs  value_cs.rs  value_da.rs  value_ds.rs  value_dt.rs  value_fd.rs  value_fl.rs  value_is.rs  value_lo.rs  value_lt.rs  value_od.rs  value_of.rs  value_ov.rs  value_ow.rs  value_pn.rs  value_sh.rs  value_sl.rs  value_ss.rs  value_st.rs  value_sv.rs  value_tm.rs  value_uc.rs  value_ui.rs  value_ul.rs  value_ur.rs  value_us.rs  value_ut.rs
dcm_data/tests/: ct.rs  rtdose.rs  rtplan.rs  rtstruct.rs
dcm_data/tests/resources/: CT1.2.752.243.1.1.20220722130644359.1060.62784.dcm  RP1.2.752.243.1.1.20220722130644612.2000.30831.dcm  RS1.2.752.243.1.1.20220722130644567.1980.53284.dcm
dcm_dictionary/: Cargo.toml  README.md
dcm_dictionary/src/: error.rs  lib.rs  tag.rs
dcm_dictionary_builder/: Cargo.toml  README.md
dcm_dictionary_builder/src/: error.rs  lib.rs  main.rs  tag.rs  utils.rs
dcm_file_sort/: Cargo.toml
dcm_file_sort/src/path_gen/: factory.rs  mod.rs  types.rs
dcm_file_sort/src/service/: mod.rs
dcm_file_sort/tests/: integration_tests.rs
dcm_file_sort/tests/common/: mod.rs
dcm_file_sort_service/: Cargo.toml  README.md
dcm_file_sort_service/src/: cli.rs  config.rs  lib.rs
dcm_file_sort_service/src/path_gen/: default_gen.rs  unkown.rs  uzg.rs
dcm_file_sort_service/src/service/: mod.rs
dcm_file_sort_service/tests/: integration_tests.rs
dcm_file_sort_service/tests/common/: mod.rs
dcm_forward/: Cargo.toml  README.md
dcm_forward/src/: config.rs  echo.rs  endpoint.rs  error.rs  lib.rs  listener.rs  main.rs  manager.rs  route.rs  worker.rs
dcm_grep/: Cargo.toml  README.md
dcm_grep/src/: error.rs  fmt.rs  grep.rs  lib.rs  main.rs  pattern.rs
dcm_ls/: Cargo.toml  README.md
dcm_ls/src/: lib.rs  model.rs  view.rs
dcm_sort/: Cargo.toml  README.md
dcm_sort/src/: error.rs  lib.rs  main.rs  support.rs
dcmcp/: Cargo.toml
dcmcp/src/: lib.rs  main.rs
dicom-pixel-data/: Cargo.toml
dicom-pixel-data/src/: attributes.rs  decode.rs  lib.rs  raw_decoder.rs  scaled_decoder.rs
ls_dcm/: Cargo.toml  README.md
ls_dcm/src/: io.rs  lib.rs
ls_dcm_ui/: Cargo.toml
ls_dcm_ui/src/: main.rs
ls_dcm_ui/ui/: app.slint
mpc_checks_cleaner/: Cargo.toml  README.md
mpc_checks_cleaner/src/: main.rs
one_way_sync/: Cargo.toml  README.md
one_way_sync/src/: main.rs
peeteewee/: Cargo.toml
peeteewee/src/: decode.rs  encode.rs  error.rs  lib.rs  serdeh.rs
peeteewee/src/data/: core.rs  detector.rs  interpolate.rs  mcc.rs  mod.rs  xcc.rs
peeteewee/src/io/: mcc.rs  mod.rs  xcc.rs
peeteewee/tests/: mcc_integration_test.rs  xcc_integration_test.rs
peeteewee/tests/resources/: pdd_x06_fff_open_8x8_crin_wat.mcc
serde-mcc/: Cargo.toml
serde-mcc/src/: error.rs
service_manager/: Cargo.toml
service_manager/src/: lib.rs
threed/: Cargo.toml  README.md
threed/src/: index.rs  lib.rs  order.rs
threed/src/dicom/: mod.rs  model.rs  tm.rs
threed/src/dicom/model/: image.rs
world/: Cargo.toml  README.md
world/src/: geom_traits.rs  grid.rs  interp.rs  lib.rs  tm.rs
world/src/intersection/: line.rs  mod.rs
world/src/primative/: direction.rs  edge.rs  error.rs  line.rs  mod.rs  rect.rs
world/src/primative/point/: add.rs  div.rs  mod.rs  model.rs  mul.rs  sub.rs  trait_impls.rs
world/src/primative/polygon/: mod.rs  twod.rs
world/src/primitive/: direction.rs  line.rs  rect.rs
world/src/primitive/point/: add.rs  div.rs  mod.rs  model.rs  mul.rs  sub.rs  trait_impls.rs
world/src/primitive/polygon/: twod.rs
