[workspace]
members = ["dcm_ls", "dcm_cp", "mpc_checks_cleaner", "one_way_sync", "dcm_data"]
resolver = "2"

[workspace.package]
#name = "rad-tools"
version = "0.1.0"
edition = "2021"
authors = ["Tom Vercauteren"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
quick-xml = "0.37"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dicom-core = "0.8.0"
dicom-object = "0.8.0"
dicom-dictionary-std = "0.8.0"
dicom-encoding = "0.8.0"
dicom-pixeldata = { version = "0.8.0", features = ["default", "ndarray"] }
dicom-transfer-syntax-registry = "0.8.0"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["default"] }
tracing = "0.1"
tracing-subscriber = "0.3"
comfy-table = "7"
rayon = "1"
chrono = "0.4"
async-std = { version = "1", features = ["attributes"] }
relative-path = "1"
pathdiff = "0.2"
num-traits = "0.2"

#[workspace.dev-dependencies]
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
