[workspace]
members = ["dcm_ls", "dcm_cp", "mpc_checks_cleaner", "one_way_sync", "dcm_file_sort_service", "dcm_sort", "common", "dcm_grep"]
resolver = "3"

[workspace.package]
#name = "rad-tools"
version = "0.1.0"
edition = "2024"
authors = ["Tom Vercauteren"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dicom-core = "0.9"
dicom-object = "0.9"
dicom-dictionary-std = "0.9"
dicom-encoding = "0.9"
dicom-transfer-syntax-registry = "0.9"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
comfy-table = "7"
rayon = "1"
chrono = "0.4"
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_json = "1"
tempfile = "3"
ctrlc = "3"
toml = "0.9"
filetime = "0.2"
regex = "1"

log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
