[workspace]
members = [
    "common",
    "core",
    "dcm_cp",
    "dcm_data",
    "dcm_file_sort_service",
    "dcm_grep",
    "dcm_ls",
    "dcm_sort",
    "mpc_checks_cleaner",
    "one_way_sync",
]
resolver = "3"

[workspace.package]
#name = "rad-tools"
version = "0.1.0"
edition = "2024"
authors = ["Tom Vercauteren"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
quick-xml = "0.39"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dicom-core = "0.9"
dicom-object = "0.9"
dicom-dictionary-std = "0.9"
dicom-pixeldata = "0.9"
dicom-encoding = "0.9"
dicom-transfer-syntax-registry = "0.9"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["default"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
comfy-table = "7"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_json = "1"
tempfile = "3"
ctrlc = "3"
toml = "0.9"
filetime = "0.2"
regex = "1"
assert_cmd = "2"
num-traits = "0.2"

log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
