[package]
name = "dcm_data"
description = "A library with data types that represent multiple DICOM objects."

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
thiserror.workspace = true
dicom-core.workspace = true
dicom-object.workspace = true
dicom-dictionary-std.workspace = true
dicom-encoding.workspace = true
dicom-pixeldata.workspace = true
dicom-transfer-syntax-registry.workspace = true
num-traits.workspace = true

[dev-dependencies]
env_logger.workspace = true
