[package]
name = "rad-tools-dcm-dictionary-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
regex.workspace = true
ureq.workspace = true
dicom-core.workspace = true
clap.workspace = true


[[bin]]
name = "dcm_dictionary_builder"
path = "src/main.rs"