[package]
name = "rad-tools-dcm-file-sort-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dicom-core.workspace = true
dicom-object.workspace = true
dicom-dictionary-std.workspace = true
dicom-transfer-syntax-registry.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
ctrlc.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"


[[bin]]
name = "dcm_file_sort"
path = "./src/bin/dcm_file_sort.rs"

[[bin]]
name = "dcm_file_sort_config_generation"
path = "./src/bin/dcm_file_sort_config_generator.rs"
