[package]
name = "rad-tools-dcm-forward"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sysinfo.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
toml.workspace = true
serde.workspace = true
