[package]
name = "rad-tools-dcm-forward"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sysinfo.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml = {workspace = true, optional = true}
serde_json = {workspace = true, optional = true}
serde.workspace = true
tokio.workspace = true
rad-tools-common = { path = "../common" }

[features]
json = ["dep:serde_json"]
toml = ["dep:toml"]
default = ["json"]

[[bin]]
name = "dcm_forward"
path = "src/main.rs"