[package]
name = "rad-tools-dcm-grep"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
regex.workspace = true
tracing.workspace = true
dicom-core.workspace = true
dicom-object.workspace = true
dicom-dictionary-std.workspace = true
dicom-transfer-syntax-registry.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
rad-tools-common = { path = "../common" }

[[bin]]
name = "dcm_grep"
path = "src/main.rs"