[package]
name = "dcm_sort"
description = "A command line interface (CLI) application to sort DICOM data into a set of subdirectories."

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dicom-core.workspace = true
dicom-object.workspace = true
dicom-dictionary-std.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
