[package]
name = "dcmcp"
description = " A command line interface (CLI) application to copy DICOM files based on the patient ID."

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dicom-core.workspace = true
dicom-object.workspace = true
dicom-dictionary-std.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-std.workspace = true
