[package]
name = "rad-tools-cp_dcm"
description = " A command line interface (CLI) application to copy DICOM files based on the patient ID."

version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dicom-core.workspace = true
dicom-object.workspace = true
dicom-dictionary-std.workspace = true
dicom-encoding.workspace = true
dicom-transfer-syntax-registry.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pathdiff.workspace = true
log.workspace = true
env_logger.workspace = true

[[bin]]
name = "dcm_cp"
path = "src/main.rs"
