[package]
name = "rad-tools-dicom-pixel-data"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom-dictionary-std.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
