[package]
name = "rad-tools-mpc-checks-cleaner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[[bin]]
name = "mpc_checks_cleaner"
path = "src/main.rs"