[package]
name = "peeteewee"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
quick-xml.workspace = true
base64.workspace = true
ndarray.workspace = true

[dev-dependencies]
log.workspace = true
env_logger.workspace = true
