[package]
name = "peeteewee"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
base64.workspace = true
ndarray.workspace = true
serde.workspace = true
serde-xml-rs.workspace = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
