[package]
name = "rad-tools-threed"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dicom-core.workspace = true
dicom-object.workspace = true
dicom-dictionary-std.workspace = true
thiserror.workspace = true
ndarray.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true