[package]
name = "rad-tools-threed"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
dicom-core.workspace = true
dicom-object.workspace = true
dicom-dictionary-std.workspace = true
thiserror.workspace = true
ndarray.workspace = true
num-traits.workspace = true
nalgebra.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
derive_builder.workspace = true

log.workspace = true
env_logger.workspace = true

